# DjangoApp

./: Dockerfile  README.md  devices.csv  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: log.txt  requiremets.txt
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: admin.py  models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py  create_profiles.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  (+5 more)
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: groups-fixture.json  orders-fixture.json  products-fixture.json  products-fixture.xml  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_remove_product_price.py  0003_product_created_at_product_discount_product_price.py  0004_order.py  0005_order_user.py  0006_order_product.py  0007_product_available_for_sale_alter_product_discount.py  0008_remove_product_available_for_sale_product_archived.py  0009_order_phone_number.py  0010_product_created_by.py  0011_order_receipt.py  0012_product_preview.py  0013_productimage.py  0014_alter_order_options_alter_product_options_and_more.py
(+22 files in other folders)
